# cfmtoolbox-solver-representations

./: .gitignore  CSPMaximizeMultiSETNEW.txt  ILPMaximize.txt  LICENSE  READ.md  README.md  script.py
CSP/: README.md
CSP/cfmtoolbox-csp-encoder/: pyproject.toml
CSP/cfmtoolbox-csp-encoder/cfmtoolbox_csp_encoder/: __init__.py  cloningCSP.py
ILP/cfmtoolbox-ilp-encoder/: pyproject.toml
SMT/: README.md  SMTMaximizeMultiset.txt  SMTMaximizeMultiset2.txt
SMT/cfmtoolbox-smt-encoder/: example.uvl  pyproject.toml
SMT/cfmtoolbox-smt-encoder/cfms/: model_13.json  model_18.json  model_23.json  model_24.json  model_8.json
SMT/cfmtoolbox-smt-encoder/cfms/presentationcfmsWithoutFalseBounds/: model_10WithoutFalseBounds.json
SMT/cfmtoolbox-smt-encoder/cfmtoolbox_smt_encoder/: __init__.py  mulitsetSMT.py
SMT/cfmtoolbox-smt-encoder/tests/: integration_test_multisetSMT.py  test_cloningSMT.py  test_mulitsetSMT.py
cfms/: model_0.json  model_14.json  model_17.json  model_2.json  model_27.json  model_7.json
cfms/UvlModels/: GPLSmall.uvl  GPLTinyBigM.uvl
cfms/UvlModelsAsJson/: AllTheCombinations.json  BerkleyDB.json  BigDataSystem.json  DellLaptopNotebook.json  GPLSmall.json  Hierons2020.json  eShop.json  eShopFeatureIDE.json
cfms/WorkingUVLModelBenchmark/: Automotive01Kowal2016.uvl  BankAlHajjaji2019.uvl  FRSCSMendonca2009.uvl  eShopLau2006.uvl
cfms/WorkingUVLModelsSPLC/: A.uvl  APL.uvl  AlwaysTrue.uvl  OnlineShop.uvl  OnlineShop2.uvl  WikiMatrix.uvl  raw_model.txt
cfms/all_generated_cfms_from_hiwi/: model_15.json  model_22.json  model_25.json  model_9.json  multiplayer.json
cfms/presentationcfms/: testmodel.json
cfms/presentationcfmsWithoutFalseBounds/: model_23WithoundFalseBounds.json  model_24WithoutFalseBounds.json
cfmtoolbox-csp-encoder/: pyproject.toml
cfmtoolbox-csp-encoder/cfmtoolbox_csp_encoder/: __init__.py  (+2 more)
(+138 files in other folders)
