[tool.poetry]
name = "cfmtoolbox-ilp-encoder"
version = "0.1.0"
description = ""
authors = ["upskk <upskk@student.kit.edu>"]

[tool.poetry.dependencies]
python = "^3.13"
cfmtoolbox = "^0.5.0"
ortools = "^9.14.6206"


[tool.poetry.plugins."cfmtoolbox.plugins"]
cfmtoolbox-ilp-encoder = "cfmtoolbox_ilp_encoder"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
