[tool.poetry]
name = "cfmtoolbox-smt-encoder"
version = "0.1.0"
description = ""
authors = ["upskk <upskk@student.kit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cfmtoolbox = "^0.3.0"

[tool.poetry.plugins."cfmtoolbox.plugins"]
cfmtoolbox-smt-encoder = "cfmtoolbox_smt_encoder"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
